--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
-    "most": "^1.6.2",
-    "nightmare": "^2.10.0",
-    "ramda": "^0.24.1",
-    "sanctuary": "^0.13.2"
+    "most": "^1.7.2",
+    "puppeteer": "^5.5.0",
+    "ramda": "^0.27.1",
+    "sanctuary": "^3.1.0"
   }
 }
