--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "dependencies": {
-    "most": "^1.7.2",
+    "@types/puppeteer": "^5.4.2",
+    "@types/sanctuary": "^3.0.3",
+    "most": "^1.9.0",
     "puppeteer": "^5.5.0",
     "ramda": "^0.27.1",
     "sanctuary": "^3.1.0"
+  },
+  "scripts": {
+    "start": "node build/main.js",
+    "build": "tsc"
   }
 }
